<resources>
    <string name="app_name">Food Delivery</string>
    <string name="foodie">Foodie</string>
    <string name="splash_text">Taste that feels like home</string>
    <string name="start_text1">Discover Tasty Meals</string>
    <string name="start_text2">Get your favorite food delivered hot and fresh, right at your doorstep.</string>
    <string name="get_started">Get Started</string>
    <string name="login_text1">Enter Your Mobile Number</string>
    <string name="login_text2">Enter your mobile number for order updates.</string>
    <string name="login_text3">Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="login_text4">Enter phone number</string>
    <string name="otp_verification_text1">OTP Verification</string>
    <string name="otp_verification_text2">We’ve sent a 6-digit code to your mobile.Enter it below to continue.</string>
    <string name="verify">Verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>